# fibberio

./: .gitignore  LICENSE.md  README.md  notes.md  programmers.csv  pyment.cfg  pyproject.toml
.github/workflows/: ci.yaml
docs/: docusaurus.config.js
fibberio/: __init__.py  cli.py  distribution.py  feature.py  helpers.py  parser.py  range.py  source.py  task.py
tests/: simple.json  test_distribution.py  test_fibberio.py  test_parser.py  test_range.py  test_sources.py  test_task.py  test_things.py
tests/data/: complex.json  conditional.json  conditional.yaml  full_names.csv  people_post.json  programmers-v2.json  programmers.json  simple.json  simple.yaml  simple_cond.json  simple_cond.yaml  simple_gbm.json  storesales.json
