[tool.poetry]
name = "fibberio"
version = "0.1.0"
description = ""
authors = ["sethjuarez <me@sethjuarez.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
PyYAML = "^6.0"
parsimonious = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
mypy = "^0.931"
black = "^22.1.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fibber = "fibberio.cli:cli"
